--- a/css/main.css
+++ b/css/main.css
@@ -42,8 +42,8 @@ ul {
     width: 100%;
     padding-top: 12px;
     padding-bottom: 12px;
-    background: var(--primary-color);
-    color: var(--white);
+    background-color: var(--primary-color);
+    color: var(--white) !important;
     text-transform: capitalize;
     font-family: var(--Montserrat);
     font-size: 24px;
@@ -61,3 +61,92 @@ ul {
 .all-btn:active{
     opacity: .7;
 }
+/* title */
+.title{
+    color: var(--primary-color);
+    font-family: var(--Montserrat);
+    font-size: 40px;
+    font-weight: 600;
+    line-height: 50px;
+    text-transform: capitalize;
+}
+
+body{
+    background-color: var(--body);
+    font-family: var(--Montserrat);
+}
+
+/* Site header */
+.logo::before{
+    content: url(../img/logo\ dark.svg);
+    display: block;
+
+}
+
+.header-nav__link{
+    color: var(--primary-color);
+    font-family: var(--Montserrat);
+    font-weight: 400;
+    line-height: 16px;
+    font-size: 24px;
+    text-transform: capitalize;
+}
+.header-nav__link:hover{
+    color: var(--primary-color);
+}
+.nav-link__btn{
+    padding-left: 43px !important;
+    padding-right: 43px !important;
+
+}
+/* Menu-bar */
+.header-menu{
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    position: relative;
+}
+.header-menu__line{
+    width: 100%;
+    height: 2px;
+    background-color: var(--white);
+    display: block;
+    position: relative;
+    transition: .3s;
+}
+.header-menu__line::before,
+.header-menu__line::after{
+    content: "";
+    display: block;
+    width: 100%;
+    height: 100%;
+    background-color: var(--white);
+    position: absolute;
+}
+
+.header-menu__line::before{
+    top: -10px;
+    transition: .3s;
+}
+.header-menu__line::after{
+    top: 10px;
+    transition: .3s;
+}
+.header-menu:focus{
+    box-shadow: 0 0 5px var(--white);
+}
+
+.header-menu:not(.collapsed) .header-menu__line::before{
+    transform: rotate(45deg);
+    top: 0;
+}
+.header-menu:not(.collapsed) .header-menu__line::after{
+    transform: rotate(-45deg);
+    top: 0;
+}
+.header-menu:not(.collapsed) .header-menu__line{
+    background-color: transparent;
+}
+
+/* Menu bar */
+/* Site header */
