--- a/css/main.css
+++ b/css/main.css
@@ -54,15 +54,18 @@ ul {
     text-align: center;
     transition: .5s;
 }
-.all-btn:hover{
+
+.all-btn:hover {
     background-color: #790ff1;
     color: var(--white);
 }
-.all-btn:active{
+
+.all-btn:active {
     opacity: .7;
 }
+
 /* title */
-.title{
+.title {
     color: var(--primary-color);
     font-family: var(--Montserrat);
     font-size: 40px;
@@ -71,19 +74,19 @@ ul {
     text-transform: capitalize;
 }
 
-body{
+body {
     background-color: var(--body);
     font-family: var(--Montserrat);
 }
 
 /* Site header */
-.logo::before{
+.logo::before {
     content: url(../img/logo\ dark.svg);
     display: block;
 
 }
 
-.header-nav__link{
+.header-nav__link {
     color: var(--primary-color);
     font-family: var(--Montserrat);
     font-weight: 400;
@@ -91,22 +94,26 @@ body{
     font-size: 24px;
     text-transform: capitalize;
 }
-.header-nav__link:hover{
+
+.header-nav__link:hover {
     color: var(--primary-color);
 }
-.nav-link__btn{
+
+.nav-link__btn {
     padding-left: 43px !important;
     padding-right: 43px !important;
 
 }
+
 /* Menu-bar */
-.header-menu{
+.header-menu {
     width: 40px;
     height: 40px;
     padding: 0;
     position: relative;
 }
-.header-menu__line{
+
+.header-menu__line {
     width: 100%;
     height: 2px;
     background-color: var(--white);
@@ -114,8 +121,9 @@ body{
     position: relative;
     transition: .3s;
 }
+
 .header-menu__line::before,
-.header-menu__line::after{
+.header-menu__line::after {
     content: "";
     display: block;
     width: 100%;
@@ -124,27 +132,31 @@ body{
     position: absolute;
 }
 
-.header-menu__line::before{
+.header-menu__line::before {
     top: -10px;
     transition: .3s;
 }
-.header-menu__line::after{
+
+.header-menu__line::after {
     top: 10px;
     transition: .3s;
 }
-.header-menu:focus{
+
+.header-menu:focus {
     box-shadow: 0 0 5px var(--white);
 }
 
-.header-menu:not(.collapsed) .header-menu__line::before{
+.header-menu:not(.collapsed) .header-menu__line::before {
     transform: rotate(45deg);
     top: 0;
 }
-.header-menu:not(.collapsed) .header-menu__line::after{
+
+.header-menu:not(.collapsed) .header-menu__line::after {
     transform: rotate(-45deg);
     top: 0;
 }
-.header-menu:not(.collapsed) .header-menu__line{
+
+.header-menu:not(.collapsed) .header-menu__line {
     background-color: transparent;
 }
 
@@ -153,7 +165,7 @@ body{
 
 /* Site-Hero */
 
-.site-hero__subtitle{
+.site-hero__subtitle {
     color: var(--text-color);
     margin-bottom: 10px !important;
     font-family: var(--Montserrat);
@@ -162,46 +174,112 @@ body{
     line-height: 22px;
     text-transform: capitalize;
 }
-.site-hero__btn{
+
+.site-hero__btn {
     max-width: 299px;
     width: 100%;
     margin: 25px auto 50px;
 }
 
-.site-hero__tech{
+.site-hero__tech {
     display: flex;
     flex-direction: column;
     align-items: center;
     row-gap: 15px;
 }
-.site-hero__tech--name{
+
+.site-hero__tech--name {
     color: var(--primary-color);
     font-family: var(--Montserrat);
     font-size: 20px;
     font-weight: 900;
     text-transform: uppercase;
 }
-.carousel-indicators{
+
+.carousel-indicators {
     bottom: -55px;
     display: flex;
     column-gap: 15px;
 }
 
-.carousel-indicators > button{
+.carousel-indicators>button {
     width: 15px !important;
     height: 15px !important;
     background-color: var(--dots);
     border-radius: 50%;
     opacity: 1;
 }
-.carousel-indicators > button:active{
+
+.carousel-indicators>button:active {
     background-color: var(--dots-active) !important;
 }
 
-.site-hero__image{
+.site-hero__image {
     width: 100%;
     height: 500px;
     object-fit: contain;
 }
 
 /* Site-Hero */
+
+/* Main section */
+
+.about-image {
+    position: relative;
+    text-align: center;
+}
+
+.about-work {
+    position: absolute;
+    padding: 20px;
+    font-size: 18px;
+    margin-bottom: 0 !important;
+    text-transform: uppercase;
+}
+
+.about-work__count {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 40px;
+    height: 40px;
+    border-radius: 50%;
+    font-family: var(--Montserrat);
+    font-size: 18px;
+    font-weight: 700;
+    font-style: italic;
+    background-color: #0FDAC2;
+    position: absolute;
+    top: -11px;
+    right: -9px;
+}
+
+.about-image__img {
+    width: 460px;
+    height: 425px;
+    margin: auto;
+}
+
+.about-desc {
+    border-radius: 8px;
+    background-color: var(--body);
+    box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
+    padding: 25px;
+}
+
+.about-desc__text {
+    color: var(--text-color);
+    font-family: var(--Montserrat);
+    font-size: 18px;
+    font-weight: 400;
+    line-height: 150%;
+    text-transform: capitalize;
+    max-width: 570px;
+    width: 100%;
+}
+
+.about-desc__btn {}
+
+.all-btn {}
+
+/* Main section */
