--- a/css/main.css
+++ b/css/main.css
@@ -72,6 +72,7 @@ ul {
     font-weight: 600;
     line-height: 50px;
     text-transform: capitalize;
+    margin-bottom: 30px;
 }
 
 body {
@@ -255,7 +256,8 @@ body {
 }
 
 .about-image__img {
-    width: 460px;
+    max-width: 460px;
+    width: 100%;
     height: 425px;
     margin: auto;
 }
@@ -348,5 +350,64 @@ body {
     object-fit: cover;
 }
 
-
 /* CAPABILITIES */
+
+/* WORK SECTION */
+.work{
+    padding-top: 75px;
+    padding-bottom: 75px;
+}
+.work-tab__pane{
+    border-radius: 8px;
+    background-color: var(--body);
+    box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
+    padding: 20px;
+}
+.work-desc__title {
+    color: var(--primary-color);
+    font-family: var(--Montserrat);
+    font-size: 24px;
+    font-weight: 600;
+    text-transform: capitalize;
+
+}
+.work-desc__text {
+    color: var(--text-color);
+    font-family: var(--Montserrat);
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 27px;
+    text-transform: capitalize;
+}
+.work-group{
+    box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
+}
+.work-list__group{
+    background-color: var(--body) !important;
+    color: var(--primary-color);
+    font-family: var(--Montserrat);
+    font-size: 18px;
+    font-weight: 600;
+    text-transform: uppercase;
+    padding: 12px;
+    box-shadow: 0px 0px 5px 3px rgba(113, 119, 241, 0.15);
+
+}
+.work-list__group.active{
+    background-color: var(--primary-color) !important;
+    color: var(--body);
+    border: 1px solid var(--primary-color);
+}
+.work-list__group:hover{
+    background-color: var(--primary-color) !important;
+    color: var(--body);
+    border: 1px solid var(--primary-color);
+}
+.work-image{
+    height: 100%;
+}
+.work-image__item{
+    height: 100%;
+}
+
+/* WORK SECTION */
